examples/good/05-while.tx
fun main(): Void {
  var a: Int = 1;
  while(a <= 3) {
    printInt(a);
    a++;
  }

  return;
}