examples/bad/07-missing-arg.tx
fun illegalFun(x: Int, y: Int): Int {
    return x;
}

fun main(): Void {
    var x: Int = illegalFun(3);
    return;
}